// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton renders 1`] = `
.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: transparent;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: 0.125s ease-out box-shadow;
  transition: 0.125s ease-out box-shadow;
  box-shadow: 0 2px 4px rgba(0,0,0,0.16);
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  box-shadow: none !important;
  line-height: 0 !important;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 6px rgba(0,0,0,0.16);
}

.c0:active {
  outline: 0;
  box-shadow: 0 2px 8px 2px rgba(0,0,0,0.16);
}

<button
  className="c0"
  color="white"
>
  <svg
    className="c1"
    fill="currentcolor"
    height={24}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M14.4 6L14 4H5v17h2v-7h5.6l.4 2h7V6z "
    />
  </svg>
</button>
`;

exports[`IconButton renders with circle prop 1`] = `
.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: transparent;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: 0.125s ease-out box-shadow;
  transition: 0.125s ease-out box-shadow;
  box-shadow: 0 2px 4px rgba(0,0,0,0.16);
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  box-shadow: none !important;
  line-height: 0 !important;
  padding: 8px;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 6px rgba(0,0,0,0.16);
}

.c0:active {
  outline: 0;
  box-shadow: 0 2px 8px 2px rgba(0,0,0,0.16);
}

<button
  className="c0"
  color="white"
>
  <svg
    className="c1"
    fill="currentcolor"
    height={24}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M14.4 6L14 4H5v17h2v-7h5.6l.4 2h7V6z "
    />
  </svg>
</button>
`;
